deploy/examples/spring-petclinic/release/base/spring-petclinic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic-deployment
  namespace: spring-petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-petclinic
  template:
    metadata:
      labels:
        app: spring-petclinic
    spec:
      containers:
      - name: spring-petclinic
        image: harbor.tanzudemo.frankcarta.com/spring-petclinic/spring-petclinic-application
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
